--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
 	<link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css" />
-	<link rel="stylesheet" href="./styles.css" />
+	<link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 		<div class="section">
 			<div class="info-wrap mob-margin">
 				<p class="title-up">Modern chair</p>
-				<h2>Telford Kursi</h2>
+				<h2>Telford Kursii</h2>
 				<h4>$254 <span>$530</span></h4>
 				<div class="section-fluid">
 					<input class="desc-btn" type="radio" id="desc-1" name="desc-btn" checked />
